@@ -277,7 +277,12 @@ public class BufferHistory
 		{
 			if("recent.dtd".equals(systemId))
 			{
-				try
+				// this will result in a slight speed up, since we
+				// don't need to read the DTD anyway, as AElfred is
+				// non-validating
+				return new StringReader("<!-- -->");
+
+				/* try
 				{
 					return new BufferedReader(new InputStreamReader(
 						getClass().getResourceAsStream("recent.dtd")));
@@ -287,7 +292,7 @@ public class BufferHistory
 					Log.log(Log.ERROR,this,"Error while opening"
 						+ " recent.dtd:");
 					Log.log(Log.ERROR,this,e);
-				}
+				} */
 			}
 
 			return null;
