@@ -213,13 +213,6 @@ public class GUIUtilities
 				{
 					if(menuItemName.startsWith("%"))
 						menu.add(loadMenu(menuItemName.substring(1)));
-					// for backwards compatibility with
-					// 3.2.2 properties
-					else if(menuItemName.startsWith("play-macro@"))
-					{
-						menu.add(loadMenuItem(menuItemName
-							.substring(11),false));
-					}
 					else
 						menu.add(loadMenuItem(menuItemName,false));
 				}
@@ -298,15 +291,6 @@ public class GUIUtilities
 				String button = st.nextToken();
 				if(button.equals("-"))
 					toolBar.addSeparator();
-				// for backwards compatibility with
-				// 3.2.2 properties
-				else if(button.startsWith("play-macro@"))
-				{
-					button = button.substring(11);
-					JButton b = loadToolButton(button);
-					if(b != null)
-						toolBar.add(b);
-				}
 				else
 				{
 					JButton b = loadToolButton(button);
@@ -334,6 +318,9 @@ public class GUIUtilities
 		String label = (action == null
 			? jEdit.getProperty(name + ".label")
 			: action.getLabel());
+
+		if(label == null)
+			label = name;
 
 		Icon icon;
 		String iconName = jEdit.getProperty(name + ".icon");
