@@ -37,7 +37,12 @@ class PluginListHandler extends HandlerBase
 	{
 		if("plugins.dtd".equals(systemId))
 		{
-			try
+			// this will result in a slight speed up, since we
+			// don't need to read the DTD anyway, as AElfred is
+			// non-validating
+			return new StringReader("<!-- -->");
+
+			/* try
 			{
 				return new BufferedReader(new InputStreamReader(
 					getClass().getResourceAsStream(
@@ -48,7 +53,7 @@ class PluginListHandler extends HandlerBase
 				Log.log(Log.ERROR,this,"Error while opening"
 					+ " plugins.dtd:");
 				Log.log(Log.ERROR,this,e);
-			}
+			} */
 		}
 
 		return null;
